Wed Mar 19 12:52:22 2003  Ossama Othman  <ossama@uci.edu>

	* tao/Exception.cpp (operator<<=, operator>>=):

          Once again placed the definitions of these Any insertion and
	  extraction operators in the CORBA namespace.  The fix was
	  reverted in the latest Any implementation changes.  Fixes
	  "unresolved symbol" link-time errors when using these
	  operators.

Wed Mar 19 13:27:09 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/CodeSets/simple/Makefile: Fix the dependancies so that the
          idl compiler isn't run twice in parallel jobs, thus corrupting
          the generated Skeleton file.

Tue Mar 18 18:00:47 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_declarator.cpp:

          Added a check for 0 prefix before doing a string compare.

Tue Mar 18 17:48:15 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * performace-tests/Latency/DSI/Roundtrip.cpp:

          Changed the signature of calls to the Any constructor.

Tue Mar 18 17:40:40 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any.h:

          Removed declarations of two unused, unimplemented methods.

        * tao/Any_T.cpp:

          Added calls to assign_translator() in the extract() method,
          after the attempt at typed extraction fails, for some
          additional Any_*_Impl template types - types which could
          contain a (w)string or (w)char nested at some level.

Tue Mar 18 15:31:06 2003  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/examples/ORT/ObjectReferenceFactory.idl:

	  New file containing this example's concrete
	  ObjectReferenceFactory valuetype.  The example incorrectly
	  attempted to use an abstract valuetype.

	* orbsvcs/examples/ORT/Gateway_ObjRef_Factory.h:

	  Inherit from the new concrete ObjectReferenceFactory valuetype
	  instead of the PortableInterceptor::ObjectReferenceFactory
	  abstract valuetype.  Fixes compile-time errors related to
	  instantiation of an abstract class.
